--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/redux-thunk": "^2.1.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
