--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
