--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-thunk": "^2.1.0",
     "formik": "^2.2.9",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-auth-kit": "^2.7.1",
     "react-content-loader": "^6.2.0",
