--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:full": "concurrently -n \"frontend,backend,prisma\" -c \"blue,red,green\" \"npm run dev\" \"cd backend && npm run dev\" \"cd backend && npm run prisma-studio\"",
-    "dev": "react-scripts start",
+    "dev": "concurrently -n \"frontend,backend,prisma\" -c \"blue,red,green\" \"npm run dev:front\" \"cd backend && npm run dev\" \"cd backend && npm run prisma-studio\"",
+    "dev:front": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
