--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "eslint-config-next": "13.4.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.3",
     "prisma": "^4.14.1",
     "react": "^18.2.0",
