--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "prisma": "^4.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.1",
