--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.2.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "cookies-next": "^2.1.1",
     "eslint-config-next": "13.4.3",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.3",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "8.41.0"
